# optics-by-example

./: README.md  cabal.project  cabal.project.local  optics-by-example.cabal  shell.nix
executables/: Main.hs
tests/: Driver.hs
