cabal-version: 3.0
name:
  optics-by-example
version:
  0.0.1
synopsis:
  Optics by Example
description:
  Exercises and misc. excerpts from Chris Penner's Optics by Example.
bug-reports:
  https://github.com/jkachmar/optics-by-example.git
license:
  MIT
license-file:
  LICENSE
author:
  chessai
build-type:
  Simple
extra-source-files:
  readme.md

-------------------------------------------------------------------------------
common common
  default-language: Haskell2010

  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specializations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings

  build-depends:
    -- Alternative prelude
      relude ^>= 0.6
    -- Convenient libraries to keep around, included with 
    , bytestring
    , text
    -- 'lens'-based stuff
    , lens ^>= 4.19
    , lens-aeson ^>= 1.1
    , generic-lens ^>= 2.0
    -- 'optics'-based stuff (for personal experimentation)
    , optics ^>= 0.2
    , aeson-optics ^>= 1.1
    , generic-optics ^>= 2.0

-------------------------------------------------------------------------------
library
  import: common
  hs-source-dirs: library
  exposed-modules:
    -- Exercises in terms of the 'lens' library
    Lens.Chapter3
    -- Exercises in terms of the 'optics' library
    Optics.Chapter3

-------------------------------------------------------------------------------
executable optics-by-example
  import: common
  hs-source-dirs: executables
  main-is: Main.hs
  build-depends: optics-by-example

-------------------------------------------------------------------------------
test-suite test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Driver.hs
  build-depends: optics-by-example
